Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-ts-app-2",
+  "name": "simple-family-tree-layout-react-example",
   "version": "0.1.2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
