--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.47",
     "@types/react": "^18.0.16",
     "@types/react-dom": "^18.0.6",
+    "gedcom": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-svg-pan-zoom": "^3.11.0",
     "simple-family-tree-layout": "^0.2.23",
-    "simple-family-tree-model": "^0.2.9",
+    "simple-family-tree-model": "^0.3.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +43,10 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^18.7.13",
     "@types/react-svg-pan-zoom": "^3.3.5"
+  },
+  "browser": {
+    "fs": false
   }
 }
