--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ekmansoft/simple-family-tree-layout-react-example"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
